--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/employeedb
+spring.datasource.url=jdbc:mysql://localhost:3306/kifiyaEmp
 spring.datasource.username=root
 spring.datasource.password=rootroot
 
